--- a/todo-app/src/app/home/home.component.html
+++ b/todo-app/src/app/home/home.component.html
@@ -1,3 +1,9 @@
-<p>
-  home works!
-</p>
+<div class="row">
+  <div class="col s6">
+    <app-todo-list></app-todo-list>
+  </div>
+
+  <div class="col s6">
+    <app-todo-list></app-todo-list>
+  </div>
+</div>
