Input properties introduced for todo-list component

--- a/todo-app/src/app/home/home.component.html
+++ b/todo-app/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col s6">
-    <app-todo-list></app-todo-list>
+    <app-todo-list title="Project Todos" [todoList]="projectTodos"></app-todo-list>
   </div>
 
   <div class="col s6">
-    <app-todo-list></app-todo-list>
+    <app-todo-list  title="Personal Todos" [todoList]="personalTodos"></app-todo-list>
   </div>
 </div>
