--- a/todo-app/src/app/todo-list/todo-list.component.html
+++ b/todo-app/src/app/todo-list/todo-list.component.html
@@ -1,17 +1,11 @@
+<h3>{{title}}</h3>
+
 <div class="input-field">
       <input placeholder="What do you want to do"type="text">
       <!--<label for="first_name">Todo Task Name</label>-->
 </div>
 
-<p>
+<p *ngFor="let todo of todoList">
       <input type="checkbox" id="test5" />
-      <label for="test5">Red</label>
-    </p>
-    <p>
-      <input type="checkbox" id="test6" checked="checked" />
-      <label for="test6">Yellow</label>
-    </p>
-    <p>
-      <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
-      <label for="filled-in-box">Filled in</label>
+      <label for="test5">{{todo.name}}</label>
     </p>
