--- a/todo-app/src/app/home/home.component.html
+++ b/todo-app/src/app/home/home.component.html
@@ -1,9 +1,11 @@
 <div class="row">
   <div class="col s6">
-    <app-todo-list title="Project Todos" [todoList]="projectTodos"></app-todo-list>
+    <app-todo-list title="Project Todos" [todoList]="todoService.getProjectTodos()"
+    (itemAdded)="addItemToList($event, 'project')"></app-todo-list>
   </div>
 
   <div class="col s6">
-    <app-todo-list  title="Personal Todos" [todoList]="personalTodos"></app-todo-list>
+    <app-todo-list  title="Personal Todos" [todoList]="todoService.getPersonalTodos()"
+    (itemAdded)="addItemToList($event, 'personal')"></app-todo-list>
   </div>
 </div>
