--- a/todoapp/src/app/home/home.component.html
+++ b/todoapp/src/app/home/home.component.html
@@ -1,56 +1,10 @@
 <div class="container home-container">
   <div class="row">
-    <div class="col col-md-6">
-      <h1>Project To Do</h1>
-      <form>
-        <div class="form-group ">          
-          <input type="text" class="form-control baseInput" id="wwf" placeholder="What do you want to do today ?">
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" value="">
-            Learn angular
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" value="" >
-            Learn java
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" value="" >
-            Learn bootstrap
-          </label>
-        </div>
-      </form>
-    </div>
-    <div class="col col-md-6">
-     <h1>Personal To Do</h1>
-     <form>
-        <div class="form-group ">          
-          <input type="text" class="form-control baseInput" id="wwf" placeholder="What do you want to do today ?">
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" value="">
-            Learn coding
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" value="" >
-            Exercise daily
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" value="" >
-           Do yoga
-          </label>
-        </div>
-      </form>
-    </div>
+  <div class="col col-md-6">
+    <app-todolist [todoList]="personalTodoList" title="Personal Todo" (inputText)="onaddtodo($event,'personal')"></app-todolist>
+   </div> 
+   <div class="col col-md-6">
+     <app-todolist [todoList]="projectTodoList" title="Project Todo" (inputText)="onaddtodo($event,'project')"></app-todolist>
+   </div> 
   </div>
   </div>
