--- a/TODO-App-Tobeworked/src/app/home-component/home-component.component.html
+++ b/TODO-App-Tobeworked/src/app/home-component/home-component.component.html
@@ -1,9 +1,9 @@
 <div class="row">
- <div class="col S6">
-   <app-todo-list></app-todo-list>
+ <div class="col s6">
+   <app-todo-list title="Project Todos" [itemList]= "TodoDataService.getProjectTodos()" (newItemAdded)="TodoDataService.addTodo($event,'Project')"></app-todo-list>
  </div>
-  <div class="col S6">
-   <app-todo-list></app-todo-list>
+  <div class="col s6">
+   <app-todo-list title ="Personal Todos"  [itemList]= "TodoDataService.getPersonalTodos()" (newItemAdded)="TodoDataService.addTodo($event,'Personal')"></app-todo-list>
  </div>
 
 
