--- a/todoapp/src/app/navbar/navbar.component.html
+++ b/todoapp/src/app/navbar/navbar.component.html
@@ -7,12 +7,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Do it</a>
+            <a class="navbar-brand" routerLink="/home">Do it</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">            
             <ul class="nav navbar-nav navbar-right">              
-              <li><a href="#">Archieve</a></li>
-              <li><a href="#">About</a></li>
+              <li><a routerLink="/archive">Archieve</a></li>
+              <li><a routerLink="/about">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
