Introduced id field in todo model and services Fixed checkbox selection issue

--- a/todo-app/src/app/todo-list/todo-list.component.html
+++ b/todo-app/src/app/todo-list/todo-list.component.html
@@ -1,11 +1,11 @@
 <h3>{{title}}</h3>
 
 <div class="input-field">
-      <input placeholder="What do you want to do" type="text" #todoText (keyup.enter)="onEnterPress(todoText.value)">
+      <input placeholder="What do you want to do" type="text" #todoText (keyup.enter)="onEnterPress(todoText.value); todoText.value = '';">
       <!--<label for="first_name">Todo Task Name</label>-->
 </div>
 
-<p *ngFor="let todo of todoList">
-      <input type="checkbox" id="test5" />
-      <label for="test5">{{todo.name}}</label>
+<p *ngFor="let todo of todoList; let i=index;">
+      <input type="checkbox" id="{{todo.id}}" />
+      <label for="{{todo.id}}">{{todo.name}}</label>
     </p>
