--- a/todoapp/src/app/navbar/navbar.component.css
+++ b/todoapp/src/app/navbar/navbar.component.css
@@ -3,5 +3,11 @@
 }
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav>li>a{
-    color: #FFF
+    color: #FFF;
+   
+
+}
+a.navbar-brand {
+    padding-left: 0;
+    font-size: 32px;
 }
