--- a/todoapp/src/app/archive/archive.component.html
+++ b/todoapp/src/app/archive/archive.component.html
@@ -1,3 +1,22 @@
-<p>
-  archive works!
-</p>
+<div class="container home-container">
+  <div class="row">
+<div class="inner-addon left-addon">
+  <input type="text" class="search-query span2" placeholder="Search&hellip;">
+</div>
+<div class="card">
+  <div class="card-block">
+    <div class="card-block-content">
+        <h4 class="card-title">design discussion</h4>
+        <div class="card-dates">
+          <div class="card-dates-left d-inline-block pull-left"><span class="card-icon"><i class="fa fa-hourglass-o" aria-hidden="true"></i></span><span class="card-subtitle">May11,2017</span></div>
+          <div class="card-dates-right d-inline-block pull-right"><span class="card-icon"><i class="fa fa-hourglass" aria-hidden="true"></i></span><span class="card-subtitle mb-2 text-muted">May11,2017</span></div>
+        </div>
+    </div>
+    <div class="card-links clearfix"> 
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+</div>
+  </div>
+</div>
