Added directive for status-indicator

--- a/todo-app/src/app/todo-list/todo-list.component.html
+++ b/todo-app/src/app/todo-list/todo-list.component.html
@@ -7,5 +7,5 @@
 
 <p *ngFor="let todo of todoList; let i=index;">
       <input type="checkbox" id="{{todo.id}}" (click)="onClick(todo.id)" />
-      <label for="{{todo.id}}">{{todo.name}}</label>
+      <label for="{{todo.id}}" class="status-indicator" appStatusHighlighter [todo]="todo">{{todo.name}}</label>
     </p>
