--- a/TODO-App-Tobeworked/src/app/app.component.html
+++ b/TODO-App-Tobeworked/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation-bar></app-navigation-bar>
 <div class="container">
-<app-home-component></app-home-component>
+<router-outlet></router-outlet>
 </div>
