--- a/TODO-App-Tobeworked/src/app/navigation-bar/navigation-bar.component.html
+++ b/TODO-App-Tobeworked/src/app/navigation-bar/navigation-bar.component.html
@@ -1,8 +1,8 @@
 <nav style="background-color:lightgreen">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Todo-App</a>
+      <a routerLink="home" class="brand-logo">Todo-App</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Archive</a></li>
+        <li><a routerLink="archive">Archive</a></li>
         <li><a href="badges.html">About</a></li>
          </ul>
     </div>
