--- a/TODO-App-Tobeworked/src/app/todo-list/todo-list.component.html
+++ b/TODO-App-Tobeworked/src/app/todo-list/todo-list.component.html
@@ -1,10 +1,10 @@
 <h3>{{title}}</h3>
 <div class="input-field">
-         <input placeholder="What Do you want to do"  type="text" #itemText (keyup.enter)="onEnterPress(itemText.value)" >
+         <input placeholder="What Do you want to do"  type="text" #itemText (keyup.enter)="onEnterPress(itemText.value);itemText.value='';" >
     
  </div>
-   <p *ngFor = "let item of itemList">
-    <input type="checkbox" id="test5" />
-     <label for="test5">{{item.name}}</label>
+   <p *ngFor = "let item of itemList; let i = index" >
+    <input #check type="checkbox" [id]=i />{{i}}{{check.id}}
+     <label for={{i}}>{{item.name}}</label>
    </p>
     
