--- a/todoapp/src/app/home/home/home.component.html
+++ b/todoapp/src/app/home/home/home.component.html
@@ -1,11 +1,11 @@
 <app-nav-bar></app-nav-bar>
 <div class="row">
   <div class="col s6">
-    <app-todo-list></app-todo-list>
+    <app-todo-list title="Project todos" [todoList]="todoService.getProjectTodos()"></app-todo-list>
   </div>
 
   <div class="col s6">
-    <app-todo-list></app-todo-list>
+    <app-todo-list title="Personal todos" [todoList]="todoService.getPersonalTodos()"></app-todo-list>
   </div>
   
 </div>
