1. Added spec for todo-list component 2. Implemented observables for search

--- a/todo-app/src/app/archive/archive.component.html
+++ b/todo-app/src/app/archive/archive.component.html
@@ -12,6 +12,7 @@
       <div class="card-stacked">
         <div class="card-content">
           <p>{{todo.name}}</p>
+          <p>{{todo.startDate | date: 'dd-MM-yyyy'}}</p>
         </div>
         <div class="card-action">
           <a href="#">Trash</a>
